# serializer version: 1
# name: test_setup_lcn_switch[switch.testgroup_switch_group5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.testgroup_switch_group5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Switch_Group5',
    'platform': 'lcn',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'lcn/config_entry_pchk_json-g000005-relay1',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_lcn_switch[switch.testgroup_switch_group5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'TestGroup Switch_Group5',
    }),
    'context': <ANY>,
    'entity_id': 'switch.testgroup_switch_group5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_lcn_switch[switch.testmodule_switch_keylock1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.testmodule_switch_keylock1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Switch_KeyLock1',
    'platform': 'lcn',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'lcn/config_entry_pchk_json-m000007-a1',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_lcn_switch[switch.testmodule_switch_keylock1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'TestModule Switch_KeyLock1',
    }),
    'context': <ANY>,
    'entity_id': 'switch.testmodule_switch_keylock1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_lcn_switch[switch.testmodule_switch_output1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.testmodule_switch_output1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Switch_Output1',
    'platform': 'lcn',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'lcn/config_entry_pchk_json-m000007-output1',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_lcn_switch[switch.testmodule_switch_output1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'TestModule Switch_Output1',
    }),
    'context': <ANY>,
    'entity_id': 'switch.testmodule_switch_output1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_lcn_switch[switch.testmodule_switch_output2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.testmodule_switch_output2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Switch_Output2',
    'platform': 'lcn',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'lcn/config_entry_pchk_json-m000007-output2',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_lcn_switch[switch.testmodule_switch_output2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'TestModule Switch_Output2',
    }),
    'context': <ANY>,
    'entity_id': 'switch.testmodule_switch_output2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_lcn_switch[switch.testmodule_switch_regulator1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.testmodule_switch_regulator1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Switch_Regulator1',
    'platform': 'lcn',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'lcn/config_entry_pchk_json-m000007-r1varsetpoint',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_lcn_switch[switch.testmodule_switch_regulator1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'TestModule Switch_Regulator1',
    }),
    'context': <ANY>,
    'entity_id': 'switch.testmodule_switch_regulator1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_lcn_switch[switch.testmodule_switch_relay1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.testmodule_switch_relay1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Switch_Relay1',
    'platform': 'lcn',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'lcn/config_entry_pchk_json-m000007-relay1',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_lcn_switch[switch.testmodule_switch_relay1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'TestModule Switch_Relay1',
    }),
    'context': <ANY>,
    'entity_id': 'switch.testmodule_switch_relay1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_lcn_switch[switch.testmodule_switch_relay2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.testmodule_switch_relay2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Switch_Relay2',
    'platform': 'lcn',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'lcn/config_entry_pchk_json-m000007-relay2',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_lcn_switch[switch.testmodule_switch_relay2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'TestModule Switch_Relay2',
    }),
    'context': <ANY>,
    'entity_id': 'switch.testmodule_switch_relay2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
